<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arpit.knowyourbody.ProteinActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        style="@style/image"
        android:src="@drawable/body5"
        android:id="@+id/image4"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        style="@style/title"
        android:text="@string/title5"/>
    <TextView
        android:id="@+id/subhead4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image4"
        style="@style/subheading"
        android:text="@string/title5sub1"/>
    <TextView
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        style="@style/divider"
        android:layout_below="@id/subhead4"/>
    <TextView
        android:id="@+id/proteinsubheading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider4"
        style="@style/proteinsubheading"
        android:text="@string/title5sub1sub1"/>
    <ImageView
        android:id="@+id/food1"
        android:layout_below="@id/proteinsubheading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/food1"/>
    <TextView
        android:id="@+id/foodtext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/food1"
        style="@style/text"
        android:text="@string/text4" />
    <TextView
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        style="@style/divider"
        android:layout_below="@id/foodtext1"/>
    <TextView
        android:id="@+id/proteinsubheading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider5"
        style="@style/proteinsubheading"
        android:text="@string/title5sub1sub2"/>
    <ImageView
        android:id="@+id/food2"
        android:layout_below="@id/proteinsubheading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/food2"/>
    <TextView
        android:id="@+id/foodtext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/food2"
        style="@style/text"
        android:text="@string/text5" />
    <TextView
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        style="@style/divider"
        android:layout_below="@id/foodtext2"/>
    <TextView
        android:id="@+id/proteinsubheading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider6"
        style="@style/proteinsubheading"
        android:text="@string/title5sub1sub3"/>
    <ImageView
        android:id="@+id/food3"
        android:layout_below="@id/proteinsubheading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/food3"/>
    <TextView
        android:id="@+id/foodtext3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/food3"
        style="@style/text"
        android:text="@string/text6" />
</RelativeLayout>
</ScrollView>
