<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.arpit.knowyourbody.CalculateActivity">

        <TextView
            android:id="@+id/title_calculate"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/title1" />

        <RadioGroup
            android:id="@+id/male_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_calculate"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="@string/male"
                android:textColor="#727272" />

            <RadioButton
                android:id="@+id/female_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/female"
                android:textColor="#727272" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/male_female"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/height"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/foot"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/inches"
                android:textColor="#212121" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/height"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:inputType="numberDecimal" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/kg_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilogram" />

                <RadioButton
                    android:id="@+id/lbs_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pound" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="0.3"
                android:text="@string/age"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/age"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/result"
            android:textColor="#727272"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/result"
            android:layout_centerHorizontal="true"
            android:background="#FF4081"
            android:onClick="calculateButton"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/button"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</ScrollView>