<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arpit.knowyourbody.BuildActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            style="@style/image"
            android:src="@drawable/body4"
            android:id="@+id/image2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title"
            android:text="@string/title3"
            />
        <TextView
            android:id="@+id/subhead2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image2"
            style="@style/subheading"
            android:text="@string/title3sub1"/>
        <TextView
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            style="@style/divider"
            android:layout_below="@id/subhead2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider2"
            style="@style/text"
            android:text="@string/text2" />
    </RelativeLayout>
</ScrollView>
