<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arpit.knowyourbody.LoseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image3"
            android:layout_width="match_parent"
            style="@style/image"
            android:src="@drawable/body3" />

        <TextView
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/title4" />

        <TextView
            android:id="@+id/subhead3"
            style="@style/subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image3"
            android:text="@string/title4sub1" />

        <TextView
            android:id="@+id/divider3"
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_below="@id/subhead3" />

        <TextView
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider3"
            android:text="@string/text3" />
    </RelativeLayout>
</ScrollView>
