<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arpit.knowyourbody.DailyActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="match_parent"
            style="@style/image"
            android:src="@drawable/body"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            style="@style/title"
            android:text="@string/title2"
             />
        <TextView
            android:id="@+id/subhead1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image1"
           style="@style/subheading"
            android:text="@string/title2sub1" />
        <TextView
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            style="@style/divider"
            android:layout_below="@id/subhead1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider1"
            style="@style/text"
            android:text="@string/text1"
             />
    </RelativeLayout>
</ScrollView>
